MeteoAPI implem return DetailedCultureDto in endPointById

--- a/src/LegumEz.Infrastructure/LegumEz.Infrastructure.csproj
+++ b/src/LegumEz.Infrastructure/LegumEz.Infrastructure.csproj
@@ -20,10 +20,13 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\LegumEz.Application\LegumEz.Application.csproj" />
 		<ProjectReference Include="..\LegumEz\LegumEz.Domain.csproj" />
 	</ItemGroup>
 
