gitignore for appsettings

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# asp.NET appsetings development
+**/**/appsettings.Development.json
