--- a/src/LegumEz.WebApi/appsettings.json
+++ b/src/LegumEz.WebApi/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LegumEzDb": ""
+    "LegumEzDb": "Server=mssql;Database=LegumEzDb;User=sa;Password=DB_secret_1;TrustServerCertificate=true"
   },
   "SeedFile": {
-    "Path": ""
+    "Path": "./data/Cultures.json"
   },
   "MeteoApiKey": {
     "Key": ""
