--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -24,5 +23,28 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
+    - name: Publish Build Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifact
+        path: |
+          **/bin/
+          **/obj/
+          
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:    
+    - name: Download Build Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifact
+        path: .
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '7.x'
+
+    - name: Run Tests
       run: dotnet test --no-build --verbosity normal
